new Boolean() considered harmful.  Boolean.TRUE, Boolean.FALSE, or Boolean.valueOf() should be used instead.  See JDK 1.4 Boolean constructor's javadoc or "Effective Java" book for why.